waypoint/boilerplate/1-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio.io/dataplane-mode: ambient
    kubernetes.io/metadata.name: test
  name: test
spec:
  finalizers:
  - kubernetes
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio.io/dataplane-mode: ambient
    kubernetes.io/metadata.name: other
  name: other
spec:
  finalizers:
  - kubernetes
---
