waypoint/boilerplate/6-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: Gateway
metadata:
  name: httpbin
  namespace: test
  annotations:
    istio.io/service-account: httpbin
spec:
  gatewayClassName: istio-mesh
